@@ -412,20 +412,20 @@
     <tal:block condition="searching">
       <tal:block define="search_param python: request.get('search_param', '');
                          search_term  python: request.get('search_term', '');
-                         found python:search_param and dtool.searchEntries(**{search_param: search_term});
-                         found python:[member for member in found if member];
-                         calendars caltool/listCalendarPaths;">
-        <tal:block condition="found">
+                         calendars python:caltool.searchCalendars(search_param,
+                             search_term, here, dtool);
+                         users calendars/keys;
+                         dummy python:users.sort();">
+        <tal:block condition="users">
             <p>
               <span i18n:translate="cpscalendar_label_add_attendee">
                 Add
               </span>
               <br>
             <form method="POST" tal:attributes="action here/REQUEST/URL1">
-              <tal:block repeat="user_id found">
+              <tal:block repeat="user_id users">
                 <tal:block define="props python:dtool.getEntry(user_id);
-                                   calpath python:caltool.getCalendarPathForUser(user_id);"
-                           condition="python:calpath in calendars">
+                                   calpath calendars/?user_id;">
                   <input type="checkbox" name="ids:list"
                    tal:attributes="value calpath" />
                   <tal:block replace="python:props['fullname']" />
@@ -439,7 +439,7 @@
               </form>
             </p>
         </tal:block>
-        <tal:block condition="python:not found">
+        <tal:block condition="python:not users">
           <p i18n:translate="cpscalendar_message_no_user_matching">
             Sorry, there isn't any user matching your query
           </p>
